deployment/ingress-nginx/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  labels:
    app.kubernetes.io/name: server
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    ingress.kubernetes.io/send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: node.saidsef.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 8080
